# mkinit

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  NOTICE  README.md  README.rst  appveyor.yml  codecov.yml  grue-mkinit.code-workspace  optional-requirements.txt  publish.sh  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_doctests.sh  run_linter.sh  run_tests.py  setup.py  whatsnew.txt
.circleci/: config.yml
.github/: copilot-instructions.md
.github/workflows/: release.yml  tests.yml
ahoy/: __init__.py  __main__.py  dynamic_make_init.py  static_autogen.py
demo/: run_demo.sh
demo/mkinit_demo_pkg/: __init__.py  submod.py
demo/mkinit_demo_pkg/subpkg/: __init__.py  nested.py
dev/: ci_public_gpg_key.pgp.enc  ci_secret_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  gpg_owner_trust.enc  port_ubelt_code.py  secrets_configuration.sh  test_on_scikit_image.py
dev/maintain/: port_ubelt_code.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst  mkinit.rst  modules.rst
docs/source/auto/: mkinit.__main__.rst  mkinit._tokenize.rst  mkinit.dynamic_mkinit.rst  mkinit.formatting.rst  mkinit.rst  mkinit.static_analysis.rst  mkinit.static_mkinit.rst  mkinit.top_level_ast.rst  mkinit.util.orderedset.rst  mkinit.util.rst  mkinit.util.util_diff.rst  mkinit.util.util_import.rst
mkinit/: __init__.py  __main__.py  __main__.pyi  _tokenize.py  _tokenize.pyi  dynamic_mkinit.py  dynamic_mkinit.pyi  formatting.py  notes.txt  orderedset.py  static_analysis.py  static_analysis.pyi  static_mkinit.py  static_mkinit.pyi  top_level_ast.py  top_level_ast.pyi  util.py
mkinit/util/: orderedset.py  orderedset.pyi  util_diff.py  util_diff.pyi  util_import.py  util_import.pyi
requirements/: docs.txt  optional.txt  runtime.txt  tests.txt
tests/: test_formatting.py  test_import.py  test_module_properties.py  test_static.py  test_with_async.py  test_with_dummy.py  test_with_simple_dummy.py
tests/mkinit_dummy_module/: __init__.py  submod2.py
tests/mkinit_dummy_module/subdir1/: __init__.py
