[build-system]
requires = [ "setuptools>=41.0.1",]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "purepy", "github", "erotemic",]
mod_name = "mkinit"
repo_name = "mkinit"
rel_mod_parent_dpath = "."
os = [ "all", "win", "linux", "osx",]
min_python = 3.6
version = "{mod_dpath}/__init__.py::__version__"
author = "Jon Crall"
author_email = "erotemic@gmail.com"
description = "Autogenerate __init__.py files"
url="https://github.com/Erotemic/mkinit"
license = "Apache 2"
dev_status = "stable"
typing = true
[tool.xcookie.entry_points]
# the console_scripts entry point creates the xdoctest executable
console_scripts = [
    "mkinit = mkinit.__main__:main",
]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev --ignore-glob=docs"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "mkinit/__main__.py", "*/setup.py",]
