[build-system]
requires = [ "setuptools>=41.0.1",]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "purepy", "github", "grue",]
mod_name = "mkinit"
repo_name = "grue-mkinit"
rel_mod_parent_dpath = "."
os = [ "all", "win", "linux", "osx",]
min_python = 3.7
version = "{mod_dpath}/__init__.py::__version__"
author = "Morgan Stair"
author_email = "morgan@tadmuck.com"
description = "Fork of mkinit with enhanced __private__ support for excluding test modules"
url="https://github.com/MorganStair/grue-mkinit"
license = "Apache 2"
dev_status = "stable"
typing = true
[tool.xcookie.entry_points]
# the console_scripts entry point creates the xdoctest executable
console_scripts = [
    "mkinit = mkinit.__main__:main",
]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev --ignore-glob=docs"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "mkinit/__main__.py", "*/setup.py",]
